# belvo_challenge

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  heroku.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  deploy-heroku.yml
app/: streamlit_app.py
app/agents/: anomaly_detector.py  financial_analysis_agent.py  invoices_extractor.py  summarizer.py
app/agents/models/: detection_output.py  invoice_type.py  invoice_type_input.py  invoice_type_output.py
app/extractors/: invoices_extractor.py
data/: transactions.csv
notebooks/: agent.ipynb  anomaly_detection.ipynb  employment_records_mx_eda.ipynb  invoices_fiscal_mx_eda.ipynb  transactions_eda.ipynb
notebooks/data/: invoices.csv
scripts/: etl_invoices.py  etl_transactions.py
services/: belvo_service.py  employment_records_mx_service.py  fiscal_mx_service.py  ofda_service.py
tests/: test_anomaly_detector.py  test_invoices_extractor.py
