[tool.poetry]
name = "belvo"
version = "0.1.0"
description = ""
authors = ["matfonseca <mfonseca@fi.uba.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"
pandas = "^2.3.1"
matplotlib = "^3.10.3"
langchain-openai = "^0.3.28"
tabulate = "^0.9.0"
langchain = "^0.3.27"
langgraph = "^0.6.2"
streamlit = "^1.47.1"
plotly = "^6.2.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.1.1"
ipykernel = "^6.30.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
